fix(gtk): fix alignment issues with nautilus sidebar

--- a/gtk-4.0/widgets/_sidebar.scss
+++ b/gtk-4.0/widgets/_sidebar.scss
@@ -132,16 +132,10 @@ placessidebar {
 
         label { 
           color: #98abb2; 
-          padding-left: 8px;
+          padding-left: 30px;
         }
-				&.sidebar-row{
-					.sidebar-icon {
-						margin-left:-14px;
-						margin-right: 12px;
-						padding-left: 14px;
-						padding-right: 12px;
-						color: #98abb2;
-					}
+				&.sidebar-row .sidebarrow-icon {
+					color: #98abb2;
 				}
 				&:hover{
 					transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
@@ -165,7 +159,7 @@ placessidebar {
                                   rgba(65,67,75,0) 36px, rgba(65,67,75,0)97%);
           }
 
-					.sidebar-icon {
+					.sidebarrow-icon {
 						-gtk-icon-shadow: 0 1px transparentize(#fff, 0.2);
 						color: inherit; 
 					}
